[package]
name = "stock-tracker"
version = "0.1.0"
edition = "2021"
author = "Ezekiel A. Mitchell <ezekielm@uw.edu>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.21.2"
tokio-test = "0.4.2"
tokio-util = "0.6.9"
futures = "0.3.18"
futures-util = "0.3.18"
futures-executor = "0.3.18"
futures-channel = "0.3.18"

[dependencies.tower]
version = "0.4.11"
